// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots TopBar No Token 1`] = `
<div>
  <nav
    aria-label="Appbar Tools"
    class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation1 MuiAppBar-root MuiAppBar-colorPrimary MuiAppBar-positionFixed makeStyles-appbar mui-fixed css-xx4di6-MuiPaper-root-MuiAppBar-root"
  >
    <div
      class="MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular makeStyles-toolbar css-hyum1k-MuiToolbar-root"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium makeStyles-logo css-i4bv87-MuiSvgIcon-root"
        focusable="false"
        viewBox="0 0 auto 32"
      >
        logo-dark.svg
      </svg>
      <div
        class="makeStyles-grow"
      />
      <div
        class="makeStyles-clusterTitle"
      />
      <button
        aria-controls=""
        aria-haspopup="true"
        aria-label="Show notifications"
        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-whz9ym-MuiButtonBase-root-MuiIconButton-root"
        tabindex="0"
        type="button"
      >
        <svg
          aria-hidden="true"
          height="1em"
          preserveAspectRatio="xMidYMid meet"
          role="img"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
          xmlns:xlink="http://www.w3.org/1999/xlink"
        >
          <path
            d="M21 19v1H3v-1l2-2v-6c0-3.1 2.03-5.83 5-6.71V4a2 2 0 0 1 2-2a2 2 0 0 1 2 2v.29c2.97.88 5 3.61 5 6.71v6l2 2m-7 2a2 2 0 0 1-2 2a2 2 0 0 1-2-2"
            fill="currentColor"
          />
        </svg>
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
    </div>
  </nav>
</div>
`;

exports[`Storyshots TopBar One Cluster 1`] = `
<div>
  <nav
    aria-label="Appbar Tools"
    class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation1 MuiAppBar-root MuiAppBar-colorPrimary MuiAppBar-positionFixed makeStyles-appbar mui-fixed css-xx4di6-MuiPaper-root-MuiAppBar-root"
  >
    <div
      class="MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular makeStyles-toolbar css-hyum1k-MuiToolbar-root"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium makeStyles-logo css-i4bv87-MuiSvgIcon-root"
        focusable="false"
        viewBox="0 0 auto 32"
      >
        logo-dark.svg
      </svg>
      <div
        class="makeStyles-grow"
      />
      <div
        class="makeStyles-clusterTitle"
      />
      <button
        aria-controls=""
        aria-haspopup="true"
        aria-label="Show notifications"
        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-whz9ym-MuiButtonBase-root-MuiIconButton-root"
        tabindex="0"
        type="button"
      >
        <svg
          aria-hidden="true"
          height="1em"
          preserveAspectRatio="xMidYMid meet"
          role="img"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
          xmlns:xlink="http://www.w3.org/1999/xlink"
        >
          <path
            d="M21 19v1H3v-1l2-2v-6c0-3.1 2.03-5.83 5-6.71V4a2 2 0 0 1 2-2a2 2 0 0 1 2 2v.29c2.97.88 5 3.61 5 6.71v6l2 2m-7 2a2 2 0 0 1-2 2a2 2 0 0 1-2-2"
            fill="currentColor"
          />
        </svg>
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
      <button
        aria-controls="primary-user-menu"
        aria-haspopup="true"
        aria-label="Account of current user"
        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit MuiIconButton-sizeMedium css-1jcv3fz-MuiButtonBase-root-MuiIconButton-root"
        tabindex="0"
        type="button"
      >
        <span />
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
    </div>
  </nav>
</div>
`;

exports[`Storyshots TopBar Processor Action 1`] = `
<div>
  <nav
    aria-label="Appbar Tools"
    class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation1 MuiAppBar-root MuiAppBar-colorPrimary MuiAppBar-positionFixed makeStyles-appbar mui-fixed css-xx4di6-MuiPaper-root-MuiAppBar-root"
  >
    <div
      class="MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular makeStyles-toolbar css-hyum1k-MuiToolbar-root"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium makeStyles-logo css-i4bv87-MuiSvgIcon-root"
        focusable="false"
        viewBox="0 0 auto 32"
      >
        logo-dark.svg
      </svg>
      <div
        class="makeStyles-grow"
      />
      <div
        class="makeStyles-clusterTitle"
      />
      <p>
        meow
      </p>
      <button
        aria-controls=""
        aria-haspopup="true"
        aria-label="Show notifications"
        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-whz9ym-MuiButtonBase-root-MuiIconButton-root"
        tabindex="0"
        type="button"
      >
        <svg
          aria-hidden="true"
          height="1em"
          preserveAspectRatio="xMidYMid meet"
          role="img"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
          xmlns:xlink="http://www.w3.org/1999/xlink"
        >
          <path
            d="M21 19v1H3v-1l2-2v-6c0-3.1 2.03-5.83 5-6.71V4a2 2 0 0 1 2-2a2 2 0 0 1 2 2v.29c2.97.88 5 3.61 5 6.71v6l2 2m-7 2a2 2 0 0 1-2 2a2 2 0 0 1-2-2"
            fill="currentColor"
          />
        </svg>
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
    </div>
  </nav>
</div>
`;

exports[`Storyshots TopBar Token 1`] = `
<div>
  <nav
    aria-label="Appbar Tools"
    class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation1 MuiAppBar-root MuiAppBar-colorPrimary MuiAppBar-positionFixed makeStyles-appbar mui-fixed css-xx4di6-MuiPaper-root-MuiAppBar-root"
  >
    <div
      class="MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular makeStyles-toolbar css-hyum1k-MuiToolbar-root"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium makeStyles-logo css-i4bv87-MuiSvgIcon-root"
        focusable="false"
        viewBox="0 0 auto 32"
      >
        logo-dark.svg
      </svg>
      <div
        class="makeStyles-grow"
      />
      <div
        class="makeStyles-clusterTitle"
      />
      <button
        aria-controls=""
        aria-haspopup="true"
        aria-label="Show notifications"
        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-whz9ym-MuiButtonBase-root-MuiIconButton-root"
        tabindex="0"
        type="button"
      >
        <svg
          aria-hidden="true"
          height="1em"
          preserveAspectRatio="xMidYMid meet"
          role="img"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
          xmlns:xlink="http://www.w3.org/1999/xlink"
        >
          <path
            d="M21 19v1H3v-1l2-2v-6c0-3.1 2.03-5.83 5-6.71V4a2 2 0 0 1 2-2a2 2 0 0 1 2 2v.29c2.97.88 5 3.61 5 6.71v6l2 2m-7 2a2 2 0 0 1-2 2a2 2 0 0 1-2-2"
            fill="currentColor"
          />
        </svg>
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
    </div>
  </nav>
</div>
`;

exports[`Storyshots TopBar Two Cluster 1`] = `
<div>
  <nav
    aria-label="Appbar Tools"
    class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation1 MuiAppBar-root MuiAppBar-colorPrimary MuiAppBar-positionFixed makeStyles-appbar mui-fixed css-xx4di6-MuiPaper-root-MuiAppBar-root"
  >
    <div
      class="MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular makeStyles-toolbar css-hyum1k-MuiToolbar-root"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium makeStyles-logo css-i4bv87-MuiSvgIcon-root"
        focusable="false"
        viewBox="0 0 auto 32"
      >
        logo-dark.svg
      </svg>
      <div
        class="makeStyles-grow"
      />
      <div
        class="makeStyles-clusterTitle"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeLarge MuiButton-containedSizeLarge MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeLarge MuiButton-containedSizeLarge makeStyles-button css-ltddg6-MuiButtonBase-root-MuiButton-root"
          tabindex="0"
          type="button"
        >
          <span
            class="makeStyles-clusterName"
            title="ak8s-desktop"
          >
            Cluster: ak8s-desktop
          </span>
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
      </div>
      <button
        aria-controls=""
        aria-haspopup="true"
        aria-label="Show notifications"
        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-whz9ym-MuiButtonBase-root-MuiIconButton-root"
        tabindex="0"
        type="button"
      >
        <svg
          aria-hidden="true"
          height="1em"
          preserveAspectRatio="xMidYMid meet"
          role="img"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
          xmlns:xlink="http://www.w3.org/1999/xlink"
        >
          <path
            d="M21 19v1H3v-1l2-2v-6c0-3.1 2.03-5.83 5-6.71V4a2 2 0 0 1 2-2a2 2 0 0 1 2 2v.29c2.97.88 5 3.61 5 6.71v6l2 2m-7 2a2 2 0 0 1-2 2a2 2 0 0 1-2-2"
            fill="currentColor"
          />
        </svg>
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
      <button
        aria-controls="primary-user-menu"
        aria-haspopup="true"
        aria-label="Account of current user"
        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit MuiIconButton-sizeMedium css-1jcv3fz-MuiButtonBase-root-MuiIconButton-root"
        tabindex="0"
        type="button"
      >
        <span />
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
    </div>
  </nav>
</div>
`;
